--- a/main.html
+++ b/main.html
@@ -16,19 +16,19 @@
     <h2>Top 5 Attractions:</h2>
     <ol>
         <li>Crystal Clear Waters for Snorkeling and Diving</li>
-        <li><strong>Scenic Sunset Viewpoints</strong></li>
-        <li><em>Lush Tropical Rainforest Hikes</em></li>
+        <li><b>Scenic Sunset Viewpoints</b></li>
+        <li><i>Lush Tropical Rainforest Hikes</i></li>
         <li>Breathtaking Coral Reefs for Underwater Exploration</li>
         <li>Adventurous Water Sports Activities</li>
     </ol>
     
     <h2>Must-Try Foods:</h2>
     <ul>
-        <li><strong>Exquisite Seafood Platters</strong></li>
-        <li><em>Local Tropical Fruits and Smoothies</em></li>
-        <li><strong>Authentic Beachside BBQ</strong></li>
+        <li><b>Exquisite Seafood Platters</b></li>
+        <li><i>Local Tropical Fruits and Smoothies</i></li>
+        <li><b>Authentic Beachside BBQ</b></li>
         <li>Traditional Island Cuisine</li>
-        <li><em>Refreshing Coconut Water</em></li>
+        <li><i>Refreshing Coconut Water</i></li>
     </ul>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
